fixed bootstrap z-index

--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -55,6 +55,7 @@ nav {
   display: flex;
   flex-direction: column;
   gap: 1.5rem;
+  z-index: 1000;
 }
 
 .showMenu {
