--- a/frontend/src/pages/Calculator.css
+++ b/frontend/src/pages/Calculator.css
@@ -3,6 +3,7 @@
   text-align: center;
   /* max-width: 50vw; */
   margin: 0 auto;
+  position: initial;
 }
 
 @media screen and (min-width: 768px) {
